@@ -1,3 +1,11 @@
+Thu, 01 Nov 2007 15:29:00 +0100 <thp@perli.net>
+Limit filename on FS-based sync to 50 characters
+
+	* src/gpodder/libipodsync.py: Do not allow extremely long file names
+	that could theoretically be generated by using data from RSS feeds;
+	this is needed to make FAT-based drives work with files that would
+	otherwise have file names that are too long
+
 Wed, 31 Oct 2007 15:22:32 +0100 <thp@perli.net>
 Escape RSS-provided strings in Pango markup
 
